--- a/AllenNosares_Resume.html
+++ b/AllenNosares_Resume.html
@@ -40,6 +40,13 @@
         <p>We develop 2D Shooting Game and make a mobile application for company use.</p>
     </section>
 
+    <!-- Character References-->
+    <section>
+        <h2>Character References</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis, fugit?</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+    </section>
+
     <!-- Skills Section -->
     <section>
         <h2>Skills</h2>
