Modify the table

--- a/Nosares_Activity2.html
+++ b/Nosares_Activity2.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosares - Activity 2</title>
+
+    <style>
+        table, th, td {
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+    </style>
 </head>
 <body>
 
@@ -69,6 +76,8 @@
         </tr>
     </table>
 
+    <br>
+
     <hr>
 
     <!--Survey Form-->
@@ -86,8 +95,8 @@
         </div>
         <br>
         <div>
-            <label for="feedback">Feedback:</label>
-            <textarea id="feedback" name="feedback" placeholder="text area..." rows="5" cols="30"></textarea>
+            <label for="feedback">Feedback:</label> <br>
+            <textarea id="feedback" name="feedback" placeholder="text area..." rows="5" cols="28"></textarea>
         </div>
         <div>
             <h3>Where do you find our Product/Service?</h3>
@@ -100,6 +109,9 @@
 
             <input type="radio" name="platform" required>
             <span>Facebook</span>
+            
+            <input type="radio" name="platform" required>
+            <span>Others</span>
             
         </div>
 
